<resources>

    <string name="app_name">بیان آزاد</string>
    <string name="default_notification_channel_id">General</string>
    <string name="event_notification_channel">عکس العمل به فعالیت ها</string>
    <string name="post_notification_channel">پست های دیگران</string>

    <string name="share_message">متن از بیان آزاد</string>
    <string name="share_title">انتخاب روش ارسال</string>

    <string name="notification_newcomment_title">یک نظر جدید داری:</string>
    <string name="notification_next">یکی دیگه</string>
    <string name="notification_turnoff">خاموش کردن</string>

    <string name="default_community_name">جامعه عموم</string>
    <string name="default_community_description">جامعه پیش فرض که بین همه کاربران بیان آزاد مشترک می‌باشد.</string>


    <!-- Scheme -->
    <string name="scheme_postnotfound">دلنوشته مورد نظر پیدا نشد!</string>
    <string name="scheme_gettingpostfailed">خطا در گرفتن دلنوشته از سرور!</string>
    <string name="scheme_communitynotfound">جامعه مورد نظر پیدا نشد!</string>
    <string name="scheme_gettingcommunityfailed">خطا در گرفتن اطلاعات از سرور!</string>

    
    <!-- Main Activity -->
    <string name="main_more_myposts">دلنوشته‌های من</string>
    <string name="main_more_communities">لیست جوامع</string>
    <string name="main_more_settings">تنظیمات</string>
    <string name="main_more_aboutus">درباره ما</string>
    <string name="main_more_guide">راهنما</string>
    <string name="main_newpost">چه احساسی داری</string>
    <string name="main_unnamed_community">جامعه بی نام</string>
    <string name="main_firsttimeinfo">برای دیدن دلنوشته‌های جدید، این پیغام را به سمت پایین بکشید…</string>
    <string name="main_loaderror">متاسفانه مشکلی در ارتباط با سرور پیش آمده است. لطفا مجدد تلاش نمایید…</string>


    <!-- Info Item View -->
    <string name="infoitem_retry">تلاش مجدد</string>


    <!-- Post Full Item View -->
    <string name="postfullitem_report">گزارش محتوای نامناسب</string>
    <string name="postfullitem_reportacomment">گزارش نظرات</string>


    <!-- Reporting... -->
    <string name="report_reporting">در حال ارسال گزارش…</string>
    <string name="report_reported">گزارش با موفقیت ثبت شد.</string>
    <string name="report_notreported">خطا در ارسال گزارش. اینترنت وصل است؟</string>
    

    <!-- Post Details Fragment -->
    <string name="postdetails_editcomment_hint">چه احساسی پیدا کردی؟</string>


    <!-- Time Util -->
    <string name="timeutil_momentsago">همین الآن</string>
    <string name="timeutil_secondsago">%d ثانیه قبل</string>
    <string name="timeutil_minutesago">%d دقیقه قبل</string>
    <string name="timeutil_hoursago">%d ساعت قبل</string>
    <string name="timeutil_daysago">%d روز قبل</string>


    <!-- Comments Title Item -->
    <string name="commentstitle">افکار شما:</string>


    <!-- No Comments -->
    <string name="nocomments">هنوز نظری نوشته نشده است. اولین نفر باش!</string>
    <string name="nocomments_smiley">:-)</string>


    <!-- New Post Activity -->
    <string name="newpost_title">حرف دلت رو بنویس…</string>
    <string name="newpost_wordcount">تعداد کلمات:</string>
    <string name="newpost_button">ارسال</string>


    <!-- Pending Post -->
    <string name="pendingpost_no_content">متنی برای ارسال نوشته نشده است.</string>
    <string name="pendingpost_short_content">متن وارد شده خیلی کوتاه است. (حداقل %d کاراکتر)</string>
    <string name="pendingpost_error">ارسال دلنوشته ممکن نشد. خطای اتصال به سرور.</string>
    <string name="pendingpost_success">ارسال موفق</string>


    <!-- My Posts Activity -->
    <string name="myposts_title">دلنوشته‌های من</string>


    <!-- Profile Activity -->
    <string name="profile_title">دلنوشته‌های یک ناشناس</string>


    <!-- My Posts Empty View Holder -->
    <string name="mypostsempty_info">دلنوشته‌ای نداری. جان را چه خوشی باشد بی صحبت جانانه!</string>
    <string name="mypostsempty_info_suffix">(-:</string>
    <string name="mypostsempty_newpost">الآن چه احساسی داری؟</string>


    <!-- Add Community Activity -->
    <string name="addcommunity_title">جامعه جدید</string>
    <string name="addcommunity_add">اضافه کردن</string>
    <string name="addcommunity_alreadyexists">این جامعه قبلا اضافه شده است.</string>


    <!-- Community List Activity -->
    <string name="communitylist_title">لیست جوامع</string>
    <string name="communitylist_intro">جامعه ها زیر مجموعه های مخفی یا آشکار از کل جامعه کاربرها هستند. جامعه‌های مختلف برای کسانی که دردهای مشترکی دارند، ساخته شده‌اند. با عضویت در این جوامع می‌توانید با کسانی صحبت کنید که شما را بهتر درک میکنند. جامعه ها را فقط با داشتن لینک آنها میتوانید اضافه کنید.</string>
    <string name="communitylist_select">یک جامعه را انتخاب کنید:</string>


    <!-- Settings Activity -->
    <string name="settings_title">@string/main_more_settings</string>
    <string name="settings_notification">نمایش دلنوشته‌ها به صورت اعلان</string>
    <string name="settings_widget">تغییر دلنوشته در ویجت</string>
    <string name="settings_widgetguide">ویجت ها همون المان هایی هستن که می‌تونی روی صفحه اصلی گوشیت قرار بدی. برای اضافه کردنشون کافیه که صفحه اصلی دستگاه رو طولانی لمس کنی. بعد میتونی از توی منو ها ویجتی که میخوای اضافه کنی رو پیدا کنی.</string>
    <string name="settings_period_off">خاموش</string>
    <string name="settings_period_fivemins">هر 5 دقیقه</string>
    <string name="settings_period_halfhour">هر نیم ساعت</string>
    <string name="settings_period_twohours">هر 2 ساعت</string>


    <!-- About Us Activity -->
    <string name="aboutus_title">@string/main_more_aboutus</string>
    <string name="aboutus_quote1">جانا به خرابات آ تا لذت جان بینی\n
    جان را چه خوشی باشد بی صحبت جانانه</string>
    <string name="aboutus_about1">«بیان آزاد» فضای گفتگوی آزادی است که همه در آن شرکت دارند. این فضا بر خلاف شبکه‌های اجتماعی معمول، که کاربران خود را تشویق به جلب توجه می‌کنند، به آدم‌ها این امکان را می‌دهد تا افکار واقعی و احساسات درونی خود را بدون ترس از قضاوت، با دیگران در میان گذاشته و تبادل نظر کنند</string>
    <string name="aboutus_quote2">وقتی مترسک نمیتونه بره پس همون یه پاشم اضافیه</string>
    <string name="aboutus_about2">ما آرمان‌هایی فراتر از تنها ایجاد یک محیط سالم و امن در فضای مجازی داریم. «بیان آزاد» تلاش می‌کند تا محیط کاریه عادلانه‌تری ایجاد کرده و راه را برای داشتن جامعه‌ای بهتر و سالم‌تر هموار نماید.</string>
    <string name="aboutus_quote3">زندگی همهمه مبهمی از ردشدن خاطره هاست،\n
هرکجا خندیدیم،… هرکجا خنداندیم، زندگانی\n آنجاست، …بیخیال همه تلخی ها…</string>
    <string name="aboutus_about3">جامعه‌ای که همه به حرف همدیگر گوش داده و بدون قضاوت شتابزده با هم صحبت خواهند کرد چراکه حرف، دریچه‌ای به سوی شناخت هر چه بیشتر آدمهاست. شناخت یکدیگر به نزدیکی بیشتر و تبادل افکار و در نهایت به فرهنگ‌سازی کمک خواهد کرد. فرهنگی که زیربنای ایجاد یک جامعه سالم‌تر خواهد بود.</string>
    <string name="aboutus_warning_attention">توجه:</string>
    <string name="aboutus_warning">این اپلیکیشن تابع قوانین جمهوری اسلامی ایران بوده و مجموعه «بیان آزاد» موظف است در صورت بروز تخلف، با عوامل مربوطه همکاری نماید.</string>
    <string name="aboutus_about_legacy">اپلیکیشن «با من حرف بزن» فضایی است آزاد برای به اشتراک گذاری افکاری که در ذهن دارید و شاید جایی و یا کسی را برای شنیدنش پیدا نمی‌کنید.&lt;br/&gt;
&lt;br/&gt;
در دنیایی که مدام خودمان و یا افکارمان را سانسور می‌کنیم، این اپلیکیشن فضایی را به وجود می‌آورد تا بدون دغدغه و به صورت ناشناس، هر چند زمانی کوتاه خودمان باشیم و اجازه دهیم این خود واقعی‌مان را دیگران ببینند و نظر بدهند.&lt;br/&gt;
&lt;br/&gt;
&lt;br/&gt;
&lt;small&gt;توجه: این اپلیکیشن تابع قوانین جمهوری اسلامی ایران بوده و مجموعه «بیان آزاد» موظف است در صورت بروز تخلف، با عوامل مربوطه همکاری کند.&lt;/small&gt;
    </string>


    <array name="month_names">
        <item>فروردین</item>
        <item>اردیبهشت</item>
        <item>خرداد</item>
        <item>تیر</item>
        <item>مرداد</item>
        <item>شهریور</item>
        <item>مهر</item>
        <item>آبان</item>
        <item>آذر</item>
        <item>دی</item>
        <item>بهمن</item>
        <item>اسفند</item>
    </array>

</resources>
